--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ main ]
 
+# Add permissions configuration
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build-and-test-frontend:
     runs-on: ubuntu-latest
@@ -66,6 +72,9 @@ jobs:
     if: github.ref == 'refs/heads/main'
     
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Download Frontend Build
       uses: actions/download-artifact@v4
       with:
@@ -85,11 +94,23 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./frontend-build
         
-    # Deploy Backend (example using Heroku)
+    # Deploy Backend to Heroku
     - name: Deploy Backend to Heroku
       uses: akhileshns/heroku-deploy@v3.12.14
       with:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
         heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
         heroku_email: ${{ secrets.HEROKU_EMAIL }}
-        appdir: "backend-files" 
+        appdir: "backend-files"
+        justlogin: true  # This ensures we're just logging in first
+        
+    - name: Deploy Backend Code
+      working-directory: backend-files
+      run: |
+        git config --global user.email "${{ secrets.HEROKU_EMAIL }}"
+        git config --global user.name "GitHub Actions"
+        git init
+        git add .
+        git commit -m "Deploy backend to Heroku"
+        heroku git:remote -a ${{ secrets.HEROKU_APP_NAME }}
+        git push heroku HEAD:main --force 
