--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,17 +94,24 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./frontend-build
         
-    # Deploy Backend to Heroku
-    - name: Deploy Backend to Heroku
-      uses: akhileshns/heroku-deploy@v3.12.14
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-        heroku_email: ${{ secrets.HEROKU_EMAIL }}
-        appdir: "backend-files"
-        justlogin: true  # This ensures we're just logging in first
+    # Install Heroku CLI
+    - name: Install Heroku CLI
+      run: |
+        curl https://cli-assets.heroku.com/install.sh | sh
         
-    - name: Deploy Backend Code
+    # Deploy Backend to Heroku
+    - name: Setup Heroku Credentials
+      run: |
+        cat > ~/.netrc <<EOF
+          machine api.heroku.com
+            login ${{ secrets.HEROKU_EMAIL }}
+            password ${{ secrets.HEROKU_API_KEY }}
+          machine git.heroku.com
+            login ${{ secrets.HEROKU_EMAIL }}
+            password ${{ secrets.HEROKU_API_KEY }}
+        EOF
+        
+    - name: Deploy Backend to Heroku
       working-directory: backend-files
       run: |
         git config --global user.email "${{ secrets.HEROKU_EMAIL }}"
